# iris

./: Dockerfile  README.md  docker-compose.yml  main.ipynb  pyproject.toml  run.sh
iris_api/: app.py  model.py  predict.py
iris_example/: pyproject.toml
