[tool.poetry]
name = "iris"
version = "0.1.0"
description = "Iris example project"
authors = ["Andrew Knoesen <andrew@spatialedge.co.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
flask = "^3.0.3"
pickle-mixin = "^1.0.2"
flask-restful = "^0.3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
